--- a/index.html
+++ b/index.html
@@ -50,8 +50,20 @@
                 </p>
             </div>
         </div>
-        <div class="info">
+        <div class="services">
+            <h3>Nuestros servicios</h3>
 
+            <div class="services-grid">
+                <div class="service-card"><img src="images/herramientas.png"><p>Herramientas</p></div>
+                <div class="service-card"><img src="images/rayo.png"><p>Productos eléctricos</p></div>
+                <div class="service-card"><img src="images/construccion.png"><p>Materiales de construcción</p></div>
+                <div class="service-card"><img src="images/delivery.png"><p>Servicio a domicilio</p></div>
+
+                <div class="service-card experience">
+                <img src="images/estrella.png">
+                <p>+10 años de experiencia</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
